# ProjectZ

./: .gitignore  CMakeLists.txt  Project-Z_Intro.txt  manifest.json
Assets/Levels/: level1.blend  level1.sgm  testlevel.blend  testlevel.blend1  testlevel.sgm
Assets/Objects/: Bett.blend  Hebeloben.blend  Hocker.blend  IDCard.blend  Pfuetze.blend  Schalterungedrueckt.blend  Schrank1.blend  Schrank2.blend  Schranko3.blend  Schranko4.blend  Stuhl.blend  Tisch.blend
Assets/Zombies/: zombie1.blend  zombie2.blend
Other/: RunOculus.bat  RunOpenVR.bat
Resources/models/levels/: door1.sgm  door2.sgm  door5.sgm  door7.sgm  extension.sgm  level1.sgm
Resources/models/objects/: button_switch_base.sgm  button_switch_button.sgm  id_card.sgm  stick_switch_base.sgm  stick_switch_stick.sgm
Resources/models/zombies/: spit.sgm  testzombie.sgm  zombie1.sgm  zombie2.sgm
Resources/shaders/: PostProcessing.hlsl  PostProcessing.metal  Shaders.json
Scripts/: CreateRelease_Oculus.bat  TestRelease_Oculus.bat
Sources/: PZApplication.cpp  PZApplication.h  PZButtonSwitch.cpp  PZButtonSwitch.h  PZDoor.cpp  PZDoor.h  PZIDCard.cpp  PZIDCard.h  PZMeleeZombie.cpp  PZMeleeZombie.h  PZPlayer.cpp  PZPlayer.h  PZRangeZombie.cpp  PZRangeZombie.h  PZSpittingZombie.cpp  PZSpittingZombie.h  PZStickSwitch.cpp  PZStickSwitch.h  PZSwitch.cpp  PZSwitch.h  PZWorld.cpp  PZWorld.h  PZZombie.cpp  PZZombie.h  PZZombieBase.cpp  PZZombieBase.h  main.cpp
